convent gpx to geojson (tested on platform)

--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,11 @@
   <div class="ng-cloak" ng-app="ods-widgets">
 
     <ods-dataset-context
-        context="ctx"
-        ctx-dataset="us-hospitals"
-        ctx-domain="discovery">
+        context="tracks"
+        tracks-dataset="us-hospitals"
+        tracks-domain="discovery">
 
-      <h2>
-        {{ ctx.dataset.metas.records_count | number }} hospitals
-        <i class="fa fa-hospital-o" aria-hidden="true"></i>
-      </h2>
-
-      <ods-text-search context="ctx" placeholder="NY, Psychiatric, Health"></ods-text-search>
-      <ods-table context="ctx" sort="nom"></ods-table>
-      <ods-map context="ctx" location="12,34.07143,-118.39588" basemap="land"></ods-map>
+      <ods-map context="tracks" location="12,34.07143,-118.39588" basemap="land"></ods-map>
 
     </ods-dataset-context>
 
